# whisper-pilot

./: .gitignore  .pytest.ini  .ruff.toml  Notebook.ipynb  README.md  data-translate.csv  data.csv  env-example  pre_pilot_script.py  pyproject.toml  report.py  requirements.txt  rerun_diffs  run  run.py  sdr-data.csv  test_report.py
notebooks/: accessioning.ipynb  aws-performance.ipynb  caption-providers.ipynb  gpu-performance.ipynb  on-prem-estimate.ipynb  whisper-options.ipynb
output-2024-04-02/: bb158br2509_sl.m4a-model_name=large_beam_size=10_patience=1.0_condition_on_previous_text=False_best_of=5.json  bb158br2509_sl.m4a-model_name=large_beam_size=10_patience=1.0_condition_on_previous_text=True_best_of=5.json  bb158br2509_sl.m4a-model_name=large_beam_size=5_patience=1.0_condition_on_previous_text=False_best_of=10.json  bb158br2509_sl.m4a-model_name=large_beam_size=5_patience=2.0_condition_on_previous_text=False_best_of=10.json  bg405cn7261_v2_sl.mp4-aws.json  bg405cn7261_v2_sl.mp4-model_name=large_beam_size=10_patience=1.0_condition_on_previous_text=True_best_of=10.json  bg405cn7261_v2_sl.mp4-model_name=large_beam_size=10_patience=1.0_condition_on_previous_text=True_best_of=5.json  bg405cn7261_v2_sl.mp4-model_name=large_beam_size=10_patience=2.0_condition_on_previous_text=True_best_of=10.json  bg405cn7261_v2_sl.mp4-model_name=large_beam_size=10_patience=2.0_condition_on_previous_text=True_best_of=5.json  bg405cn7261_v2_sl.mp4-model_name=large_beam_size=5_patience=1.0_condition_on_previous_text=False_best_of=5.json  bw689yg2740_sl.mp4-aws.json  (+93 more)
test/: test_aws.py  (+3 more)
(+2007 files in other folders)
